<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/oval_arkaplan"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:contentDescription="@string/eczane"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"/>

        <TextView
            android:id="@+id/eczaneIsim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginEnd="50dp"
            android:text="Faruk Eczanesi"
            android:textColor="#d90429"
            android:textAlignment="center"
            android:textSize="20sp"/>

        </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:padding="-8dp"
        android:layout_margin="-10dp"
        android:background="#000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:src="@drawable/city"
            android:contentDescription="@string/l_e" />

        <TextView
            android:id="@+id/eczaneIlce"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Beyoğlu"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/eczaneMesafe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:gravity="center|end"
            android:layout_gravity="center"
            android:text="5 KM"
            android:textColor="#000000"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:src="@drawable/adres"
            android:contentDescription="@string/adres" />

        <TextView
            android:id="@+id/eczaneAdres"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="İstanbul/Kadıköy/Rıhtım Karşısı No:5"
            android:textColor="#ef233c"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:src="@drawable/telefon"
            android:contentDescription="@string/telefon_numaras" />

        <TextView
            android:id="@+id/eczaneTelefon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_gravity="center"
            android:text="5555555555"
            android:textColor="#4258E4"
            android:textSize="20sp"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/tarif"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/maps"
            android:contentDescription="@string/konum_tarifi"
            app:tint="#46A52C" />

        </LinearLayout>



</LinearLayout>